Mon Aug 18 09:48:06 1997  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* get_myaddress.c: Include string.h for memcpy prototype.

Sat Feb 22 01:34:19 1997  Sam Hartman  <hartmans@tertius.mit.edu>

	* Makefile.in (SHLIB_EXPDEPS): s/.so/$(SHLIBEXT)

Mon Feb 10 11:10:02 1997  Ezra Peisach  <epeisach@quest.rose.brandeis.edu>

	* configure.in: Check for sys/uio.h.

	* svc_udp.c: Include sys/uio.h is available for struct iovec.

Mon Feb 10 00:04:36 1997  Tom Yu  <tlyu@mit.edu>

	* svc_udp.c (svcudp_recv): Avoid coredumps under Solaris (and
	possibly other systems) by passing in a non-NULL iovec to
	recvmsg().

Thu Jan 16 19:02:22 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (all-prerecurse): Update to use double-colon rules.

Tue Jan 14 19:22:42 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new library build procedure.

Wed Dec  4 12:42:49 1996  Barry Jaspan  <bjaspan@mit.edu>

	* Various changes to allow channel bindings to work with both UDP
 	and TCP cleanly [krb5-libs/180]:

	* auth_gssapi.c: remove the special-case exception to channel
 	bindings failure added in the previous revision, since we now
 	solve the problem by making channel bindings not fail

	* clnt_udp.c: use a connected socket so that the client can
 	determine its own source address with getsockname

	* svc.h: add xp_laddr and xp_laddrlen fields to SVCXPRT structure

	* svc_tcp.c: set xp_laddr and xp_laddrlen when a connection is
 	established

	* svc_udp.c (svcudp_recv): use recvmsg with MSG_PEEK followed by
 	recvfrom in order to determine both source and dest address on
 	unconnected UDP socket, set xp_laddr and xp_laddrlen

Fri Nov 22 15:50:42 1996  unknown  <bjaspan@mit.edu>

	* get_myaddress.c (get_myaddress): use krb5_os_localaddr instead
 	of ioctl() to get local IP addresses [krb5-libs/227]

	* clnt_generic.c, clnt_simple.c, getrpcport.c: use sizeof instead
 	of h_length to determine number of bytes of addr to copy from DNS
 	response [krb5-misc/211]
